--- a/src/Components/Auth/Auth.css
+++ b/src/Components/Auth/Auth.css
@@ -1,4 +1,4 @@
-
+A
 
 .welcomePage {
     display: flex;
@@ -30,7 +30,6 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    background-color: white;
     height: 100vh;
 }
 
