--- a/src/Components/ResultsPage/ResultsPage.css
+++ b/src/Components/ResultsPage/ResultsPage.css
@@ -3,7 +3,7 @@
     background-image: url("../../GOR-logo.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     height: 100vh;
 }
 
@@ -48,8 +48,6 @@
 .boxed {
     padding: 20px;
     /* border: 1px solid green; */
-    width: 844px;
-    height: 522px;
     /* background-color: rgb(219, 219, 219); */
     opacity: 100%;
     z-index: 4;
@@ -80,6 +78,16 @@
     animation-timing-function: ease-in;
     animation-duration: 1s;
 }
+
+.result-player-popup {
+    position: relative;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-bottom: 10%;
+}
+
 @keyframes fadeInOpacity {
     0% {
         opacity: 0;
