--- a/src/Components/ResultsPage/ResultsPage.css
+++ b/src/Components/ResultsPage/ResultsPage.css
@@ -44,6 +44,15 @@
     color: #FFFFFF;
 }
 
+.result-card {
+    padding: 20px;
+    /* border: 1px solid green; */
+    /* background-color: rgb(219, 219, 219); */
+    opacity: 100%;
+    z-index: 4;
+    text-align: center;
+    font-weight: bold;
+}
 
 .boxed {
     padding: 20px;
